--- a/YourCourses/YourCourses.csproj
+++ b/YourCourses/YourCourses.csproj
@@ -198,10 +198,24 @@
     <Compile Include="Migrations\201705050706205_InitialModel.Designer.cs">
       <DependentUpon>201705050706205_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705050827496_CreateFirstTables.cs" />
+    <Compile Include="Migrations\201705050827496_CreateFirstTables.Designer.cs">
+      <DependentUpon>201705050827496_CreateFirstTables.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705050935257_overrideAttributes.cs" />
+    <Compile Include="Migrations\201705050935257_overrideAttributes.Designer.cs">
+      <DependentUpon>201705050935257_overrideAttributes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\CorrectAnswer.cs" />
+    <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Lecture.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Practice.cs" />
+    <Compile Include="Models\SubLecture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -288,6 +302,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201705050706205_InitialModel.resx">
       <DependentUpon>201705050706205_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705050827496_CreateFirstTables.resx">
+      <DependentUpon>201705050827496_CreateFirstTables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705050935257_overrideAttributes.resx">
+      <DependentUpon>201705050935257_overrideAttributes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
