add practice without output

--- a/YourCourses/Views/Web.config
+++ b/YourCourses/Views/Web.config
@@ -24,6 +24,9 @@
 
   <appSettings>
     <add key="webpages:Enabled" value="false" />
+    <add key="webpages:Version" value="3.0.0.0" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 
   <system.webServer>
