--- a/YourCourses.Tests/YourCourses.Tests.csproj
+++ b/YourCourses.Tests/YourCourses.Tests.csproj
@@ -195,6 +195,11 @@
     <Content Include="Scripts\codemirror-2.37\theme\twilight.css" />
     <Content Include="Scripts\codemirror-2.37\theme\vibrant-ink.css" />
     <Content Include="Scripts\codemirror-2.37\theme\xq-dark.css" />
+    <Content Include="Scripts\jquery-1.8.0.intellisense.js" />
+    <Content Include="Scripts\jquery-1.8.0.js" />
+    <Content Include="Scripts\jquery-1.8.0.min.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
