--- a/YourCourses/Web.config
+++ b/YourCourses/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-YourCourses-20170505085850.mdf;Initial Catalog=aspnet-YourCourses-20170505085850;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-YourCourses-20170505085850.mdf;Initial Catalog=aspnet-YourCourses-20170505085850;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="YourCoursesContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=YourCoursesContext-20170606121037; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|YourCoursesContext-20170606121037.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
