--- a/YourCourses/YourCourses.csproj
+++ b/YourCourses/YourCourses.csproj
@@ -279,6 +279,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\gears.gif" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -391,7 +392,6 @@
     <Content Include="Scripts\codemirror-2.37\mode\pascal\LICENSE" />
     <Content Include="Scripts\codemirror-2.37\mode\coffeescript\LICENSE" />
     <Content Include="Scripts\codemirror-2.37\LICENSE" />
-    <Content Include="ClassDiagram2.cd" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\codemirror-2.37\theme\ambiance-mobile.css" />
     <Content Include="Scripts\codemirror-2.37\theme\ambiance.css" />
@@ -472,6 +472,9 @@
     <Content Include="Views\Lectures\Index.cshtml" />
     <Content Include="Views\SubLectures\Index.cshtml" />
     <Content Include="Views\SubLectures\Create.cshtml" />
+    <Content Include="Views\SubLectures\Delete.cshtml" />
+    <Content Include="Views\CoursesList\SubLecturesList.cshtml" />
+    <Content Include="Views\CoursesList\ShowLecture.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
