--- a/YourCourses/Views/Web.config
+++ b/YourCourses/Views/Web.config
@@ -42,5 +42,6 @@
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
+    <pages validateRequest="false" />
   </system.web>
 </configuration>
