--- a/YourCourses/YourCourses.csproj
+++ b/YourCourses/YourCourses.csproj
@@ -221,7 +221,12 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LecturesController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\OptionsController.cs" />
     <Compile Include="Controllers\PracticeController.cs" />
+    <Compile Include="Controllers\PracticesHomeController.cs" />
+    <Compile Include="Controllers\QuestionsController.cs" />
+    <Compile Include="Controllers\QuizsController.cs" />
+    <Compile Include="Controllers\QuizsListController.cs" />
     <Compile Include="Controllers\SubLecturesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -258,6 +263,30 @@
     <Compile Include="Migrations\201706060757428_AddPracticeFK.Designer.cs">
       <DependentUpon>201706060757428_AddPracticeFK.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706080748128_RedactPractideModel.cs" />
+    <Compile Include="Migrations\201706080748128_RedactPractideModel.Designer.cs">
+      <DependentUpon>201706080748128_RedactPractideModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706080825567_AddMark.cs" />
+    <Compile Include="Migrations\201706080825567_AddMark.Designer.cs">
+      <DependentUpon>201706080825567_AddMark.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706090549341_AddQuizModel.cs" />
+    <Compile Include="Migrations\201706090549341_AddQuizModel.Designer.cs">
+      <DependentUpon>201706090549341_AddQuizModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706090552587_AddArtictFK.cs" />
+    <Compile Include="Migrations\201706090552587_AddArtictFK.Designer.cs">
+      <DependentUpon>201706090552587_AddArtictFK.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706090703590_AddQuizInfo.cs" />
+    <Compile Include="Migrations\201706090703590_AddQuizInfo.Designer.cs">
+      <DependentUpon>201706090703590_AddQuizInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706090754317_AddTextToOptionModel.cs" />
+    <Compile Include="Migrations\201706090754317_AddTextToOptionModel.Designer.cs">
+      <DependentUpon>201706090754317_AddTextToOptionModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -268,7 +297,10 @@
     <Compile Include="Models\Image.cs" />
     <Compile Include="Models\Lecture.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Option.cs" />
     <Compile Include="Models\Practice.cs" />
+    <Compile Include="Models\Question.cs" />
+    <Compile Include="Models\Quiz.cs" />
     <Compile Include="Models\SubLecture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -475,6 +507,29 @@
     <Content Include="Views\SubLectures\Delete.cshtml" />
     <Content Include="Views\CoursesList\SubLecturesList.cshtml" />
     <Content Include="Views\CoursesList\ShowLecture.cshtml" />
+    <Content Include="Views\PracticesHome\Create.cshtml" />
+    <Content Include="Views\PracticesHome\Delete.cshtml" />
+    <Content Include="Views\PracticesHome\Details.cshtml" />
+    <Content Include="Views\PracticesHome\Edit.cshtml" />
+    <Content Include="Views\PracticesHome\Index.cshtml" />
+    <Content Include="Views\CoursesList\ShowPractice.cshtml" />
+    <Content Include="Views\CoursesList\ShowEditorArea.cshtml" />
+    <Content Include="Views\Quizs\Index.cshtml" />
+    <Content Include="Views\Quizs\Create.cshtml" />
+    <Content Include="Views\Quizs\Delete.cshtml" />
+    <Content Include="Views\Questions\Create.cshtml" />
+    <Content Include="Views\Questions\Delete.cshtml" />
+    <Content Include="Views\Questions\Details.cshtml" />
+    <Content Include="Views\Questions\Edit.cshtml" />
+    <Content Include="Views\Questions\Index.cshtml" />
+    <Content Include="Views\Options\Create.cshtml" />
+    <Content Include="Views\Options\Delete.cshtml" />
+    <Content Include="Views\Options\Details.cshtml" />
+    <Content Include="Views\Options\Edit.cshtml" />
+    <Content Include="Views\Options\Index.cshtml" />
+    <Content Include="Views\QuizsList\Index.cshtml" />
+    <Content Include="Views\QuizsList\Questions.cshtml" />
+    <Content Include="Views\QuizsList\QuestionsList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -521,6 +576,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706060757428_AddPracticeFK.resx">
       <DependentUpon>201706060757428_AddPracticeFK.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706080748128_RedactPractideModel.resx">
+      <DependentUpon>201706080748128_RedactPractideModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706080825567_AddMark.resx">
+      <DependentUpon>201706080825567_AddMark.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706090549341_AddQuizModel.resx">
+      <DependentUpon>201706090549341_AddQuizModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706090552587_AddArtictFK.resx">
+      <DependentUpon>201706090552587_AddArtictFK.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706090703590_AddQuizInfo.resx">
+      <DependentUpon>201706090703590_AddQuizInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706090754317_AddTextToOptionModel.resx">
+      <DependentUpon>201706090754317_AddTextToOptionModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
