--- a/YourCourses/packages.config
+++ b/YourCourses/packages.config
@@ -33,7 +33,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net452" />
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net452" />
@@ -61,6 +61,9 @@
   <package id="NUnit" version="3.6.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="ScriptCs.Contracts" version="0.17.1" targetFramework="net452" />
+  <package id="ScriptCs.Core" version="0.17.1" targetFramework="net452" />
+  <package id="ScriptCs.Engine.Roslyn" version="0.17.1" targetFramework="net452" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
